--- a/project.config.json
+++ b/project.config.json
@@ -40,10 +40,10 @@
 			"current": 0,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "article",
 					"pathName": "pages/article/article",
-					"query": "id=705410674",
+					"query": "id=1652243267&layout=5",
 					"scene": null
 				}
 			]
