--- a/project.config.json
+++ b/project.config.json
@@ -37,13 +37,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "article",
 					"pathName": "pages/article/article",
 					"query": "id=1652243267&layout=5",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "search",
+					"pathName": "pages/search/search",
+					"query": "",
 					"scene": null
 				}
 			]
