添加电影电视列表页

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/article/article",
     "pages/search/search",
     "pages/searchResult/searchResult",
+    "pages/searchDetail/searchDetail",
     "pages/index/index",
     "pages/logs/logs"
   ],
